# substrate-node-template

./: .gitignore  Cargo.toml  Makefile
node/src/: chain_spec.rs  service.rs
pallets/validator-set/: Cargo.toml
pallets/validator-set/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
