[package]
name = "validator-set"
version = "0.1.0"
authors = ["MaoWei <maowei@yuanben.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.frame-system]
default-features = false
version = '2.0.0-alpha.6'

[dependencies.session]
default-features = false
package = 'pallet-session'
version = '2.0.0-alpha.6'

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'frame-system/std',
    'serde',
    'session/std'
]
